--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,4 +132,4 @@ jobs:
         uses: ./.github/actions/store-evaluation
         with:
           evaluation-data: ${{ steps.evaluator.outputs.result }}
-          environment: staging
+          environment: production
