--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,19 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
-# Matches multiple files with brace expansion notation
-# Set default charset
-[*.{js,html,md,css}]
-end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
+[*]
 charset = utf-8
-
-[*.{js,css}]
-indent_style = space
-indent_size = 2
 quote_type = single
+end_of_line = unset
+trim_trailing_whitespace = true
+indent_brace_style = K&R
+
+[*.{ts,tsx,js,jsx}]
+tab_width = 2
+indent_style = tab
+insert_final_newline = true
+
+[.env]
+tab_width = 2
+indent_style = tab
+end_of_line = lf
+insert_final_newline = false
