--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "test": "cypress run",
     "lint": "eslint .",
-    "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
+    "lint:styles": "stylelint **/*.css -c stylelint.config.js --ignore-disables --allow-empty-input --fix",
     "cypress:open": "cypress open"
   },
   "devDependencies": {
@@ -10,7 +13,9 @@
     "@stylistic/eslint-plugin": "^2.6.4",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "stylelint": "13.8.0",
-    "stylelint-config-standard": "20.0.0"
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4"
   }
 }
